--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div id="gameArea">
                 <div id="btnContainer">
-                <button id="startBtn">Click here to start the game</button>
+                <button class="startBtn">Click here to start the game</button>
                 </div>
             </div>
             
